src/graph/snapshots/hopr_api__graph__function__tests__adversarial_peer_good_probes_but_zero_acks.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 1.0, path_index: 0, result_value: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0
  intermediate:
    balance: "1000"
    score: 0.95
initial_value: 1
path_index: 0
result_value: -0.95
