src/graph/snapshots/hopr_api__graph__function__tests__forward_first_edge_negative_when_connected_intermediate_but_no_capacity.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 1.0, path_index: 0, result_value: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0.9
  intermediate:
    balance: ~
    score: 0.95
initial_value: 1
path_index: 0
result_value: -1
