src/graph/snapshots/hopr_api__graph__function__tests__forward_first_edge_negative_when_not_connected.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 1.0, path_index: 0, result_value: cost }"
---
observations:
  immediate: ~
  intermediate:
    balance: "1000"
    score: 0.95
initial_value: 1
path_index: 0
result_value: -1
